more history examples

--- a/01slides_intro_cryptography.tex
+++ b/01slides_intro_cryptography.tex
@@ -132,6 +132,35 @@ D E F G H I J K L M N O P Q R S T U V W X Y Z A B C \\
 \end{itemize}
 \end{frame}
 
+\begin{frame}{Playfair Cipher}
+\begin{itemize}
+    \item Digraph substitution cipher
+    \item Uses a 5x5 matrix from keyword
+    \item Encrypts pairs of letters
+    \item Example:
+    \begin{itemize}
+        \item Keyword: MONARCHY
+        \item Plaintext: HELLO
+        \item Ciphertext: HF LX PR
+    \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Playfair Cipher Matrix}
+\begin{tabular}{|c|c|c|c|c|}
+    \hline
+    M & O & N & A & R \\
+    \hline
+    C & H & Y & B & D \\
+    \hline
+    E & F & G & I/J & K \\
+    \hline
+    L & P & Q & R & S \\
+    \hline
+    T & U & V & W & X \\
+    \hline
+\end{tabular}
+\end{frame}
 
 
 \begin{frame}{Modern Cryptography}
