reorganized, now folders for notes, code, etc

--- a/notes/preamble.tex
+++ b/notes/preamble.tex
@@ -24,6 +24,7 @@
 \usepackage{hyperref}
 \usepackage{tikz}
 \usepackage{graphicx}
+\graphicspath{{img/}}
 \setlength\columnsep{15pt}
 \usepackage{makecell}
 \renewcommand{\arraystretch}{1.2}
