--- a/notes/03slides_modern_crypto.tex
+++ b/notes/03slides_modern_crypto.tex
@@ -1,167 +1,35 @@
 \input{preamble.tex}
 
-\title[]{Introduction to Cryptography}
+\title[]{Modern Cryptographic Primitives}
 \begin{document}
 \begin{frame}
 \titlepage
 \end{frame}
 
-\begin{withoutheadline}
+%\begin{withoutheadline}
 
-\begin{frame}{Introduction to Cryptography}
+\begin{frame}{Modern Cryptography}
 \begin{itemize}
-    \item What is Cryptography?
-    \item Importance of Cryptography
-    \item Basic Terminology
-    \item Historical Background
-    \item Substitution Ciphers
-    \item Symmetric Cryptography
-    \item Asymmetric Cryptography
-    \item Common Cryptographic Algorithms
-    \item Cryptographic Applications
-    \item Future of Cryptography
+    \item Since World War II, cryptography has been much more formally researched
+    \item National Security Agency (NSA) funding this camp has funded a lot of the research
+    \item We will examine current algorithms and what they do
 \end{itemize}
 \end{frame}
 
-\begin{frame}{What is Cryptography?}
+\begin{frame}{Principles}
 \begin{itemize}
-    \item Science of securing communication
-    \item Encodes messages to protect information
-    \item Ensures confidentiality, integrity, authenticity
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Importance of Cryptography}
-\begin{itemize}
-    \item Protects sensitive information
-    \item Secures online transactions
-    \item Prevents unauthorized access
-    \item Ensures data integrity
-    \item Vital for national security
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Basic Terminology}
-\begin{itemize}
-    \item Plaintext: Unencrypted information
-    \item Ciphertext: Encrypted information
-    \item Encryption: Process of converting plaintext to ciphertext
-    \item Decryption: Process of converting ciphertext back to plaintext
-    \item Key: Secret value used in encryption/decryption
-\end{itemize}
-\end{frame}
-
-\begin{frame}{History of Cryptography}
-\begin{itemize}
-    \item Ancient civilizations
-    \item Caesar Cipher
-    \item Vigenère Cipher
-    \item Enigma Machine
-    \item Hands-on: Substitution ciphers
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Caesar Cipher}
-\begin{itemize}
-    \item Simple substitution cipher
-    \item Shift each letter by fixed number
-    \item Example: Shift by 3
-    \item Plaintext: HELLO
-    \item Ciphertext: KHOOR
-\end{itemize}
-A B C D E F G H I J K L M N O P Q R S T U V W X Y Z \\
-D E F G H I J K L M N O P Q R S T U V W X Y Z A B C \\
-\end{frame}
-
-\begin{frame}{Caesar Cipher Exercise}
-\begin{itemize}
-    \item Decode the message
-    \item Ciphertext: ZKHQ WKH PRRQ KLWV BRXU HBH
-    \item Shift by 3
-    \item Plaintext:  \_\_\_\_ \_\_\_ \_\_\_\_ \_\_\_\_ \_\_\_\_ \_\_\_
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Caesar Cipher Exercise}
-\begin{itemize}
-    \item Define a secret message
-    \item Define the key (shift by an amount from 1 to 26)
-    \item Compute the encrypted message
-    \item Exchange secret messages with a partner
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Breaking a Caesar Cipher}
-\begin{itemize}
-    \item Brute-force attack
-    \item Test all possible shifts (25 keys)
-    \item Find readable plaintext
-    \item Example: Shift by 1 to 25
-    \item How can we create a cipher that is more difficult to break?
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Vigenère Cipher Explained}
-\begin{itemize}
-    \item Polyalphabetic substitution cipher
-    \item Uses a repeating keyword
-    \item Each letter in plaintext shifted by keyword letter
-    \item Example:
+    \item Only a one-time pad is truly secure
     \begin{itemize}
-        \item Keyword: KEY
-        \item Plaintext: ATTACK AT DAWN
-        \item Ciphertext: KXRKGI EX HEUR
+        \item A key that is truly random, when XORed with a message, is perfectly secure
+        \item Any cryptosystem that uses a key repeatedly can eventually be broken
+        \item Using a one-time pad creates a second problem
+        \item How to generate and distribute random numbers in vast numbers
     \end{itemize}
+    \item Security is never based on secrecy of the method of encryption
+    \item The only secret is the key itself
 \end{itemize}
 \end{frame}
-
-\begin{frame}{Vigenère Cipher Example}
-\begin{itemize}
-    \item Keyword: KEY
-    \item Plaintext: ATTACK AT DAWN
-    \item Ciphertext: KVVCCS DC HCPZ
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Build Your Own Vigenère Cipher}
-\begin{itemize}
-    \item Choose a keyword
-    \item Encrypt the message
-    \item Example: "HELLO WORLD" with "KEY"
-    \item Ciphertext: \_\_\_\_\_\ \_\_\_\_\_\_
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Playfair Cipher}
-\begin{itemize}
-    \item Digraph substitution cipher
-    \item Uses a 5x5 matrix from keyword
-    \item Encrypts pairs of letters
-    \item Example:
-    \begin{itemize}
-        \item Keyword: MONARCHY
-        \item Plaintext: HELLO
-        \item Ciphertext: HF LX PR
-    \end{itemize}
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Playfair Cipher Matrix}
-\begin{tabular}{|c|c|c|c|c|}
-    \hline
-    M & O & N & A & R \\
-    \hline
-    C & H & Y & B & D \\
-    \hline
-    E & F & G & I/J & K \\
-    \hline
-    L & P & Q & R & S \\
-    \hline
-    T & U & V & W & X \\
-    \hline
-\end{tabular}
-\end{frame}
-
+    
 
 \begin{frame}{Modern Cryptography}
 \begin{itemize}
@@ -311,6 +179,19 @@ D E F G H I J K L M N O P Q R S T U V W X Y Z A B C \\
     \end{itemize}
 \end{frame}
 
+\begin{frame}{Hashing}
+\begin{itemize}
+    \item A hash is a function that converts a sequence of bits to a number
+    \item Generally, the data is far bigger than the number
+    \item By definition, there are many combinations of bits that must hash to the same value
+    \item Multiple values converting to the same hash value are called collisions
+    \item Example: 3 bit hash value (0 .. 7)
+\end{itemize}
+Testing testing 123 $\rightarrow$ 1 \\
+Hello there $\rightarrow$ 2         \\
+Attack at dawn $\rightarrow$ 1      \\
+\end{frame}
+
 \begin{frame}{Secure Hash Algorithm}
     A cryptographic hash algorithm must:
     \begin{itemize}
@@ -319,8 +200,8 @@ D E F G H I J K L M N O P Q R S T U V W X Y Z A B C \\
         \item Difficult to construct a different message with the same value.
         \begin{itemize}
             \item Example
-            \item hash("X sells house to Y for 1000BTC") %$\rarrow C206AD95$
-            \item hash("X gives house to Y for \$1")     %$\rarrow C206AD95$
+            \item hash("X sells house to Y for 1000BTC") %$\rightarrow C206AD95$
+            \item hash("X gives house to Y for \$1")     %$\rightarrow C206AD95$
         \end{itemize}
     \end{itemize}
     Given m is large, there must be multiple m for the same $hash(m)$
@@ -436,7 +317,6 @@ $gcd = a s_i + b t_i = 240*-9 + 46*47 = 2$
     \end{itemize}
 \end{frame}
 
-
 \begin{frame}{Elliptic Curve Cryptography: ECC}
     \begin{itemize}
         \item Elliptic Curves
@@ -482,7 +362,6 @@ $gcd = a s_i + b t_i = 240*-9 + 46*47 = 2$
 \begin{frame}{ECC Discrete Logarithm Points}
     \includegraphics[scale=0.25]{ECC_mod17.png}
 \end{frame}
-
 
 \begin{frame}{ECC Animation}
     \url{https://curves.xargs.org/}
@@ -1149,5 +1028,5 @@ contract Bank {
     \end{itemize}
 \end{frame}
 
-\end{withoutheadline}
+%\end{withoutheadline}
 \end{document} 
