--- a/01slides_intro_cryptography.tex
+++ b/01slides_intro_cryptography.tex
@@ -162,6 +162,63 @@ D E F G H I J K L M N O P Q R S T U V W X Y Z A B C \\
 \end{tabular}
 \end{frame}
 
+\begin{frame}{Enigma Machine}
+\begin{itemize}
+    \item Used in WWII by Nazi Germany
+    \item Electromechanical rotor machine
+    \item Polyalphabetic substitution cipher
+    \item Complex key settings
+    \item Daily key sheets
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Enigma Machine Example}
+\begin{itemize}
+    \item Rotors: Three, adjustable
+    \item Plugboard: Swappable letter pairs
+    \item Example plaintext: ATTACK
+    \item Ciphertext: BJRZGY
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Stream Ciphers}
+\begin{itemize}
+    \item Read in a stream of data
+    \item Write out a stream of data
+    \item Use a key to generate secret key
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Computer Data and Basic Information Theory}
+\end{frame}
+
+\begin{frame}{Bits and Bytes}
+\begin{itemize}
+    \item Bit: Smallest unit of data (0 or 1)
+    \item Byte: Group of 8 bits
+    \item All data on a computer is bits
+    \item Meaning is context-dependent
+\end{itemize}
+01000001: 65, 'A' \\
+We will focus on raw bits to learn the building blocks of modern cryptography
+\end{frame}
+
+\begin{frame}{Bitwise Operations}
+\begin{itemize}
+    \item Computers are built out of digital logic gates
+    \item AND
+    \item OR
+    \item XOR
+    \item NOT
+\end{itemize}
+\begin{tabular}{|c|c|c|c|c|}
+    \hline
+    A & B & A AND B & A OR B & A XOR B \\
+    0 & 0 &       0 &      0 &       0 \\
+    0 & 1 &       0 &      1 &       1 \\
+    1 & 0 &       0 &      1 &       1 \\
+    1 & 1 &       1 &      1 &       0 \\ \hline
+\end{frame}
 
 \begin{frame}{Modern Cryptography}
 \begin{itemize}
