--- a/notes/preamble.tex
+++ b/notes/preamble.tex
@@ -24,6 +24,8 @@
 \usepackage{hyperref}
 \usepackage{tikz}
 \usepackage{graphicx}
+\usepackage{booktabs}
+
 \graphicspath{{img/}}
 \setlength\columnsep{15pt}
 \usepackage{makecell}
